tests/ui/derive/fail_ts_serde_alias_enum_variant.stderr
error: Foundry contract derives cannot represent `#[serde(alias = "...")]` on enum variants; aliases make the backend accept undocumented enum values
 --> tests/ui/derive/fail_ts_serde_alias_enum_variant.rs:5:21
  |
5 |     #[serde(alias = "queued")]
  |                     ^^^^^^^^
