tests/ui/derive/fail_ts_serde_alias_enum_variant.rs
use serde::Serialize;

#[derive(Serialize, ts_rs::TS, foundry::TS)]
enum AliasEnumVariantTs {
    #[serde(alias = "queued")]
    Pending,
}

fn main() {}
